pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-1
spec:
  containers:
  - image: nginx:1.12
    name: nginx
    ports:
      - containerPort: 80
