service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app # Select all pods that have this labels
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
