ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: slurm.edu.ttask.club
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
